--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -23,7 +23,7 @@
                     <li><a href="/logout">logout<i class="fa-solid fa-right-from-bracket"></i></a></li>
                     <li><img src ="../images/user/<%=locals.userLogged.image%>" width="40px"; style="border-radius: 100%;"></li>
                     <li><%=locals.userLogged.first_name %></li>
-                    <li><a href="productCart">Carrito<i class="fas fa-shopping-basket"></i></a></li>
+                    <li><a href="/productCart">Carrito<i class="fas fa-shopping-basket"></i></a></li>
                 <%}%>
                 <li><a href="/">Inicio</a></li>
                 
