--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -9,7 +9,7 @@
     <title>ElectroArco</title>
     <!--Estilos propios-->
     <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/src/public/css/homeAdmin.css">
+    <link rel="stylesheet" href="/css/homeAdmin.css">
     <link rel="stylesheet" href="/css/register.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/colors.css">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/editUser.css">
     <link rel="stylesheet" href="/css/adminUser.css">
-    <link rel="stylesheet" href="/src/public/css/colors.css">
+    <link rel="stylesheet" href="/css/colors.css">
     <!--Fuentes-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
