--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,12 +1,14 @@
-*{
+* {
     box-sizing: border-box;
 }
-h2{
+
+h2 {
     width: 100%;
     text-align: center;
     padding: 5px;
 }
-.overlay2{
+
+.overlay2 {
     box-shadow: 10px 10px 5px 0px grey;
     width: 60%;
     margin-left: 20%;
@@ -16,51 +18,247 @@ h2{
     margin-top: 10px;
 }
 
-.validator{
+.validator {
     font-size: 16px;
     color: red;
     font-style: italic;
     width: 80%;
     margin-left: 10%;
     margin-top: 10px
-    
-
 }
 
-.labelCorreo,.correoUsuario,.labelContraseña,.contraseñaUsuario{
+.form-label {
     width: 80%;
     margin-left: 10%;
     margin-top: 10px;
-    
+
 }
-p.remember{
+
+p.remember {
     width: 80%;
     margin-left: 10%;
     margin-top: 10px;
     text-align: center;
 }
-.formularioRegistroLogin{
+
+.formularioRegistroLogin {
     width: 100%;
-       
+    position: relative;
+
 }
-.correoUsuario, .contraseñaUsuario{
-    
+
+input {
+    border-radius: 5px;
+    width: 100%;
+    padding: 8px;
+}
+.crear-formulario {
+    width: 100%;
+    position: relative;
+}
+.group-email,
+.group-password {
+
     background-color: white;
     border-radius: 5px;
     padding: 10px;
+    position: relative;
 
 }
-.botonGuardarLogin{
+
+.botonGuardarLogin {
     width: 100%;
     display: flex;
-    
+
 }
-.botonFormularioLogin{
+
+.botonFormularioLogin {
     width: 50%;
-    height: 30px;
-    margin: 30px;
+    height: 37px;
+    margin: 16px;
     background-color: #1259c3;
     color: #ebebeb;
-    justify-content: space-between;
     border-radius: 5px;
 }
+
+.form-validation {
+    position: absolute;
+    right: 15px;
+    top: 58px;
+    z-index: 101;
+    font-size: 16px;
+}
+
+.form-input-error {
+    font-size: 10px;
+    width: 88%;
+    margin: auto;
+    margin-bottom: 0;
+    color: #bb2929;
+    display: none;
+}
+
+.form-input-error-asset {
+    display: block;
+}
+
+.form p {
+    margin: 0;
+}
+input.remember-password {
+    width: 10%;
+}
+.remember-password{
+    font-size: 15px;
+    width: 90%;
+    text-align: center;
+    margin-top: 10px;
+    margin: auto;
+}
+
+/* ----- -----  Estilos para Validacion ----- ----- */
+.form-group-correct .form-validation {
+    color: #1ed12d;
+    opacity: 1;
+}
+
+.form-group-incorrect .form-label {
+    color: #bb2929;
+}
+
+.form-group-incorrect .form-validation {
+    color: #bb2929;
+    opacity: 1;
+}
+
+.form-group-incorrect .form-imput {
+    border: 3px solid #bb2929;
+}
+
+.form-message {
+    height: 70px;
+    line-height: 15px;
+    background: #F66060;
+    padding: 1px 15px;
+    border-radius: 3px;
+    color: #fff;
+    display: none;
+}
+
+.form-message-asset {
+    display: block;
+}
+
+.form-message p {
+    margin: 0;
+}
+p.error {
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 13px;
+    justify-content: space-around;
+    text-align: -webkit-center;
+}
+i.fas.fa-exclamation-triangle {
+    width: 10%;
+    font-size: 20px;
+}
+
+
+@media (min-width: 768px) {
+    .form-validation {
+        position: absolute;
+        right: 15px;
+        top: 58px;
+        z-index: 101;
+        font-size: 16px;
+    }
+
+    .form-input-error {
+        font-size: 15px;
+        width: 88%;
+        margin: auto;
+        margin-bottom: 0;
+        color: #bb2929;
+        display: none;
+    }
+
+    .form-input-error-asset {
+        display: block;
+    }
+
+    .form-message {
+        height: 35px;
+        line-height: 15px;
+        background: #F66060;
+        padding: 10px 15px;
+        border-radius: 3px;
+        display: none;
+        font: 24px;
+    }
+    .form-message-asset {
+        display: block;
+    }
+    p.error {
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        font-size: 15px;
+        justify-content: space-around;
+        text-align: -webkit-center;
+    }
+    input.remember-password {
+        width: 10%;
+    }
+    .remember-password{
+        font-size: 20px;
+        width: 90%;
+        text-align: center;
+        margin-top: 10px;
+        margin: auto;
+    }
+}
+
+
+@media (min-width: 1024px) {
+    .form-validation {
+        position: absolute;
+        right: 15px;
+        top: 58px;
+        z-index: 101;
+        font-size: 16px;
+    }
+
+    .form-input-error {
+        font-size: 16px;
+        width: 100%;
+        margin: auto;
+        margin-bottom: 0;
+        color: #bb2929;
+        display: none;
+    }
+
+    .form-input-error-asset {
+        display: block;
+    }
+    p.error {
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        font-size: 21px;
+        justify-content: space-around;
+        text-align: -webkit-center;
+    }
+    input.remember-password{
+        width: 10%;
+    }
+    .remember-password {
+        font-size: 30px;
+        width: 90%;
+        text-align: center;
+        margin-top: 10px;
+        margin: auto;
+    }
+}
+
