--- a/src/views/product/formCreationProduct.ejs
+++ b/src/views/product/formCreationProduct.ejs
@@ -5,12 +5,13 @@
         <div class="titulo"><h1>Creación de productos</h1></div>
             <main class="main">
                 
-                <form action="/createProduct" method="POST" enctype="multipart/form-data">
+                <form action="/createProduct" class="products" method="POST" enctype="multipart/form-data">
                     
                     <div class="formulario">
                         <div class="control-for">
                             <input type="text" placeholder="Nombre del producto:" name="name" class="input-control1"
                                 id="name" value="<%= locals.oldData ? oldData.name : null %>">
+                                <p class="error-message" id="error-name"></p>
                                 <div class="validator">
                                     <% if (locals.errors && errors.name) { %>
                                         <%= errors.name.msg %>
@@ -20,6 +21,7 @@
                         <div class="control-for">
                             <input type="text" placeholder="Descripción del producto" name="description" class="input-control1"
                             value="<%= locals.oldData ? oldData.description : null %>">
+                            <p class="error-message" id="error-description"></p>
                             <div class="validator">
                                 <% if (locals.errors && errors.description) { %>
                                     <%= errors.description.msg %>
@@ -30,7 +32,9 @@
                             <h5>Foto del producto</h5>
                             <input type="file" placeholder="Foto del producto" name="image" id="image" class="inputFoto"
                             >
+                            <p class="error-message" id="error-image"></p>
                             <div class="validator">
+                                
                                 <% if (locals.errors && errors.image) { %>
                                     <%= errors.image.msg %>
                                         <% }%>
@@ -44,6 +48,7 @@
                         <div class="control-for">
                             <input type="text" placeholder="Precio del producto:" name="price" class="input-control1"
                                 id="precioProducto" value="<%= locals.oldData ? oldData.price : null %>">
+                                <p class="error-message" id="error-price"></p>
                                 <div class="validator">
                                     <% if (locals.errors && errors.price) { %>
                                         <%= errors.price.msg %>
@@ -61,6 +66,7 @@
                     </div>
                 </form>
             </main>
-
+           
             <%- include('../partials/footer') %>
+            <script src="/js/validateProduct.js" ></script>
     </body>
