--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -36,12 +36,12 @@
 							<article class="product-detail-info">
 								<h2 class="product-detail-title">
 									<%= product.name %>
-										
+									<%= product.color %>
 								</h2>
 
 								<p class="product-detail-price small">
 									<span>$<%= product.price %></span>
-									/
+									
 									<b>
 										<%= product.discount %>% OFF
 									</b>
