Organizando vista de imagen carro de compras

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -25,6 +25,7 @@
                     <li><img src ="../images/user/<%=locals.userLogged.image%>" width="40px"; style="border-radius: 100%;"></li>
                     <li><%=locals.userLogged.first_name %></li>
                     <li><a href="/formCreationProduct">Crear Producto</i></a></li>
+                    <li><a href="/detail/4">Perfil</i></a></li>
                     <li><a href="/productCart">Carrito<i class="fas fa-shopping-basket"></i></a></li>
                 <%}%>
                 <li><a href="/">Inicio</a></li>
