--- a/src/views/product/productCart.ejs
+++ b/src/views/product/productCart.ejs
@@ -11,7 +11,7 @@
             <div class="banner"><img class="banner" src="images/home/banner.jpg"></div>
             <article class="article1">
                 <div class="img">
-                    <img class="article" src="images/products/img-tv-samsung-smart.jpg">
+                    <img class="article" src="images/products/1686190625892-D_NQ_NP_821321-MCO41746077930_052020-O.png">
                 </div>
                 <div class="content">
                     <div class="brand">
