--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -27,9 +27,9 @@
                     <li><a href="/formCreationProduct">Crear Producto</i></a></li>
                     <li><a href="/detail/4">Perfil</i></a></li>
                     <li><a href="/productCart">Carrito<i class="fas fa-shopping-basket"></i></a></li>
+                    <li><a href="/">Inicio</a></li>
                 <%}%>
                 <li><a href="/">Inicio</a></li>
-                
             </ul>
         </div>
        
